# rust-gha-template

./: README.md
template/: Cargo.toml  Dockerfile  LICENSE  action.yaml.liquid  cargo-generate.toml
template/src/: main.rs
